objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Service</fullName>
        <description>Used by non-technical case record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Attention</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS - Retail Banking - Starter - Lost Stolen Card</fullName>
        <description>Cases for handling lost or stolen credit and debit cards</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Lost - on hold</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Replacement dispatched</fullName>
        </values>
        <values>
            <fullName>Replacement ordered</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS - Retail Banking - Starter - Transaction Dispute</fullName>
        <description>Used for Cases within the transaction disputes (e.g. RegE)</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%8F%B1  Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Merchant Alert</fullName>
        </values>
        <values>
            <fullName>Pending Settlement Credit</fullName>
        </values>
        <values>
            <fullName>Provisional Credit</fullName>
        </values>
        <values>
            <fullName>Research %26 Investigation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Treasury Implementation - Child</fullName>
        <description>Used for Commercial Banking Treasury Implementation</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Add-ons</fullName>
        </values>
        <values>
            <fullName>Assign Top Level Approver</fullName>
        </values>
        <values>
            <fullName>Base Services</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>User Access %26 Entitlements</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FINS Treasury Implementation - Parent</fullName>
        <description>Used for Commercial Banking Treasury Implementation</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>Authorization</fullName>
        </values>
        <values>
            <fullName>Client Info</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Contacts %26 Roles</fullName>
        </values>
        <values>
            <fullName>Internal Team Assignments</fullName>
        </values>
        <values>
            <fullName>MSA</fullName>
        </values>
        <values>
            <fullName>NAICS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>Support process used by all case record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%8F%B1  Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>%E2%9A%99%EF%B8%8F  Working</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Service</fullName>
        <description>Used by the &quot;Technical Service&quot; Case record type.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Attention</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>inov8__PMT</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Access__c</fullName>
        <description>Used for RegE</description>
        <label>Account Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking &amp; Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Claim_NBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Claim NBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Script_Read_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the RegE demo.</description>
        <label>Card Script Read To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Assignment_Timestamp__c</fullName>
        <label>Case Assignment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Feedback__c</fullName>
        <description>Feedback field used for the sentiment analysis demo</description>
        <label>Case Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_API_Name__c</fullName>
        <description>Returns the developer name of the record type</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Case Record Type API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Survey_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_320, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_320) -1) + &apos;/apex/DE_CustomerSurvey&apos;</formula>
        <label>Case Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IMAGE( CASE( Origin, 
&quot;Phone&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuPhone.png&quot;, 
&quot;Email&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuEmail.png&quot;, 
&quot;Chat&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuWeChat.png&quot;, 
&quot;Website&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuExperienceCloud.png&quot;, 
&quot;Community&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuExperienceCloud.png&quot;, 
&quot;Mobile Device&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuMobile.png&quot;, 
&quot;Q&amp;A&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelWebsite.png&quot;, 
&quot;Facebook&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuFacebook.png&quot;, 
&quot;Twitter&quot;, &quot;015Hr000004ZYwr&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Google&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelGoogle.png&quot;, 
&quot;Sina Weibo&quot;, &quot;015Hr000004ZYws&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Portal&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelWebsite.png&quot;, 
&quot;Instagram&quot;, &quot;015Hr000004ZYwt&amp;oid=&quot;&amp;$Organization.Id, 
&quot;LinkedIn&quot;, &quot;015Hr000004ZYwu&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Salesforce IoT&quot;, &quot;015Hr000004ZYwv&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Text Session&quot;, &quot;https://fins-ido.s3.us-east-2.amazonaws.com/Service/ChannelMenuSMS.png&quot;, 

&quot;015Hr000004ZYww&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Community_Contact_Match__c</fullName>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Contact Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <description>Used in RegE demo</description>
        <formula>IF( SDO_Service_SLA_Compliant__c , IMAGE(&quot;/resource/milestoneStatus/confirm32.png&quot;, &quot;checkmark&quot;,15,15), &quot;🔥&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Case ( Origin, &apos;Phone&apos;, 3.5, &apos;Chat&apos;, 2, &apos;Email&apos;, 2, &apos;Website&apos;, 1.5, &apos;Portal&apos;, 1.5, &apos;Chatter Answer&apos;, 1.2, 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Service Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Small and Medium Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Overdraft__c</fullName>
        <label>Date of Overdraft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_and_Notes__c</fullName>
        <description>Any relevant notes related to the fee waiver request</description>
        <label>Decision and Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisputeOutcome__c</fullName>
        <description>Used for RegE</description>
        <label>Dispute Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Non-Fraud</fullName>
                </value>
                <value>
                    <fullName>ATM Machine Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispute_Reasoning__c</fullName>
        <label>Dispute Reasoning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The charges were not made by me/a person authorized by me</fullName>
                </value>
                <value>
                    <fullName>The transaction is mine, but I dispute it</fullName>
                </value>
                <value>
                    <fullName>I asked the merchant for a credit adjustment, but unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <label>ED Predicted CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Override_Default_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow user to override Einstein Discovery fields from Trigger</description>
        <label>ED Override Default Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_Cost__c</fullName>
        <description>Estimated cost to perform the service tasks.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Case_Record_Type_API_Name__c</fullName>
        <description>Returns the developer name of the record type</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Case Record Type API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to select same day ACH service.</inlineHelpText>
        <label>ACH (same day)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AccountActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to include summary and detail activity for the account.</inlineHelpText>
        <label>Account Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AcctTransfers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to include account transfers service.</inlineHelpText>
        <label>Account Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminEmail__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_AdminName__r.Email</formula>
        <inlineHelpText>Administrator Email is pulled from the related Administrator Contact record.</inlineHelpText>
        <label>Administrator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminEntitle__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select the user access and entitlements for the previously specified Administrator.</inlineHelpText>
        <label>Administrator Entitlements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select the Administrator from the Account.</inlineHelpText>
        <label>Administrator Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminPhone__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_AdminName__r.Phone</formula>
        <inlineHelpText>Primary Contact Phone is pulled from the selected Primary Contact record.</inlineHelpText>
        <label>Administrator Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminTitle__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_AdminName__r.Title</formula>
        <inlineHelpText>Administrator Title is pulled from the related Administrator Contact record.</inlineHelpText>
        <label>Administrator Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_AdminUserID__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_AdminName__r.Email</formula>
        <inlineHelpText>Administrator User ID is pulled from the related Administrator Contact record.</inlineHelpText>
        <label>Administrator User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_BillPayPresent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to include the Bill Payment and Presentation service.</inlineHelpText>
        <label>Bill Payment and Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_CertAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Certificate of Authority for Corporate Treasury Management Services Agreement</inlineHelpText>
        <label>Certificate of Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_CertCorpRes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Certified Corporate Resolutions for Corporate Treasury Management Services Agreement</inlineHelpText>
        <label>Certified Corporate Resolutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_Client_Status__c</fullName>
        <description>Client status for Commercial Banking - Treasury Management Implementation use case</description>
        <inlineHelpText>Select a status for your client</inlineHelpText>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                    <default>true</default>
                    <label>Existing</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_ControlledDisb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to select the Controlled Disbursement service.</inlineHelpText>
        <label>Controlled Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_CustID__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>Account.FinServ__CustomerID__c</formula>
        <inlineHelpText>Customer ID is pulled from the related Account.</inlineHelpText>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_EDI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to select the EDI service.</inlineHelpText>
        <label>EDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_ExportOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to include the Export Options service (i.e. Quicken, Quick Books, Microsoft Money, Comma and Tab)</inlineHelpText>
        <label>Export Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_Level1Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to bundle all Level I Service (Account Activity Summary &amp; Detail, Account Transfers, Bill Payment and Presentment, Online Statements, and Export Options).</inlineHelpText>
        <label>Level I Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_Level2Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to bundle all Level II services (Stop Payments, Same Day ACH).</inlineHelpText>
        <label>Level II Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_Level3Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to bundle all Level III services (EDI, Controlled Disbursement, Wire Transfer Services).</inlineHelpText>
        <label>Level III Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Master Services Agreement - FINS Commercial Banking Treasury Implementation use case</description>
        <inlineHelpText>Select this checkbox to use the client&apos;s existing Master Services Agreement or specify that the MSA has been completed for a new client.</inlineHelpText>
        <label>Master Services Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_MailAddress__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>((Account.ShippingStreet) + &quot;, &quot; + (Account.ShippingCity) + &quot;, &quot; + (Account.ShippingState) + &quot; &quot; + (Account.ShippingPostalCode))</formula>
        <inlineHelpText>Mailling Address is pulled from the related Account record.</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_NAICS1__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>Account.NAICS_Code__c</formula>
        <inlineHelpText>NAICS 1 is pulled from the related Client record.</inlineHelpText>
        <label>NAICS 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_NAICS2__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>Account.NAICS_Code__c</formula>
        <inlineHelpText>NAICS 2 is pulled from the related Client record.</inlineHelpText>
        <label>NAICS 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_NextAppMeeting__c</fullName>
        <defaultValue>(TODAY() + 30)</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Date is pre-populated based on existing schedule.  This date can be manually changed.</inlineHelpText>
        <label>Next Committee Approval Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_OnlineStatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to include the Online Statements service (if enrolled).</inlineHelpText>
        <label>Online Statements (if enrolled)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_PhysAddress__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>((Account.BillingStreet) + &quot;, &quot; + (Account.BillingCity) + &quot;, &quot; + (Account.BillingState) + &quot; &quot; + (Account.BillingPostalCode))</formula>
        <inlineHelpText>Address is pulled from the related Account record.</inlineHelpText>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_PrepoulateMSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-populate from Existing MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_PrimUserEntitle__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select the user access and entitlements for the previously specified Primary Contact.</inlineHelpText>
        <label>Primary Contact Entitlements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_RegCreditOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a user from the list.</inlineHelpText>
        <label>Regional Credit Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_RelManager__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>(Account.Owner.FirstName + &quot; &quot; +  Account.Owner.LastName)</formula>
        <inlineHelpText>Relationship Manager is based on the Client Owner.</inlineHelpText>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_SrLenderRegVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a user from the list.</inlineHelpText>
        <label>Senior Lender/Regional VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_Stop_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to select the Stop Payments service.</inlineHelpText>
        <label>Stop Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TechContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select the Technical Contact from the Client.</inlineHelpText>
        <label>Technical Contact Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Technical Contact Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>